# automl-research

./: .gitignore  LICENSE  README.md  pyproject.toml
automl_research/: __init__.py  cli.py  config.py  context_builder.py  decider.py  metrics.py  progress_chart.py  researcher.py  runner.py  scanner.py
automl_research/templates/: multi_stage.yaml  pytorch_config.yaml  simple_script.yaml
