[project]
name = "automl-research"
version = "0.1.6"
description = "Generalized autonomous ML experimentation — Karpathy's autoresearch for any ML project"
authors = [
    {name = "Paras Koundal", email = "paraskoundal@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [
    "machine-learning",
    "automl",
    "experiment-tracking",
    "autonomous-research",
    "hyperparameter-optimization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "matplotlib>=3.5",
    "numpy>=1.21",
]

[project.optional-dependencies]
wandb = ["wandb>=0.15"]

[project.urls]
Homepage = "https://github.com/paraskoundal/automl-research"
Repository = "https://github.com/paraskoundal/automl-research"
Issues = "https://github.com/paraskoundal/automl-research/issues"

[project.scripts]
automl-research = "automl_research.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automl_research"]

[tool.hatch.build.targets.sdist]
include = ["automl_research/**", "README.md", "pyproject.toml"]
